--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <meta content="Bienvenue sur mon site web personnel web, où je partage mes passions et projets." name="description">
     <meta content="site web,passion, projet, HTML5, CSS3, Javascript" name="keywords">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/color.css">
+    <link rel="stylesheet" href="assets/css/skins/color-1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    
+    <!-- ===== Style Switcher ===== -->
+    <link rel="stylesheet" href="assets/css/skins/color-1.css" class="alternate-style" title="color-1" disabled>
+    <link rel="stylesheet" href="assets/css/skins/color-2.css" class="alternate-style" title="color-2" disabled>
+    <link rel="stylesheet" href="assets/css/skins/color-3.css" class="alternate-style" title="color-3" disabled>
+    <link rel="stylesheet" href="assets/css/skins/color-4.css" class="alternate-style" title="color-4" disabled>
+    <link rel="stylesheet" href="assets/css/skins/color-5.css" class="alternate-style" title="color-5" disabled>
+    <link rel="stylesheet" href="assets/css/style-switcher.css"> 
 </head>
 <body>
     <!-- ===== Main Container Start ===== -->
@@ -23,18 +29,18 @@
                 <span></span>
             </div>
              <ul class="nav">
-                <li> <a href="#" class="active"><i class="fa fa-home"></i> Home</a></li>
-                <li> <a href="#"><i class="fa fa-user"></i> About</a></li>
-                <li> <a href="#"><i class="fa fa-list"></i> Services</a></li>
-                <li> <a href="#"><i class="fa fa-briefcase"></i> Portfolio</a></li>
-                <li> <a href="#"><i class="fa fa-comments"></i> Contact</a></li>
+                <li> <a href="#home" class="active"><i class="fa fa-home"></i> Home</a></li>
+                <li> <a href="#about"><i class="fa fa-user"></i> About</a></li>
+                <li> <a href="#services"><i class="fa fa-list"></i> Services</a></li>
+                <li> <a href="#portfolio"><i class="fa fa-briefcase"></i> Portfolio</a></li>
+                <li> <a href="#contact"><i class="fa fa-comments"></i> Contact</a></li>
             </ul>
         </div>
         <!-- ===== Aside End ===== -->
         <!-- ===== Main Content Start ===== -->
          <div class="main-content">
         <!-- ===== Home Section Start ===== -->
-         <section class="home section hidden">
+         <section class="home active section" id="home">
             <div class="container">
                 <div class="row">
                     <div class="home-info padd-15">
@@ -43,7 +49,7 @@
                         <h3 class="my-profession">I'm a <span class="typing"> Web Designer</span></h3>
                         <p>I'm a web Designer with extensive experience for over 10 years. My expertise is to
                         create and website design, graphic design, and many more ...</p>
-                        <a href="#Contact" class="btn hire-me">Hire me</a>
+                        <a href="#contact" class="btn hire-me">Hire me</a>
                     </div>
                         <div class="home-img padd-15 ">
                             <img src="assets/images/hero.jpg" alt="">
@@ -53,7 +59,7 @@
          </section>
         <!-- ===== Home Section End  ===== -->
         <!-- ===== About Section Start  ===== -->
-         <section class="about section hidden">
+         <section class="about section" id="about">
             <div class="container">
                 <div class="row">
                     <div class="section-title padd-15">
@@ -98,7 +104,7 @@
                                     <div class="row">
                                         <div class="buttons">
                                             <a href="#" class="btn">Download CV</a>
-                                            <a href="#Contact" class="btn hire-me">Hire Me</a> 
+                                            <a href="#contact" class="btn hire-me">Hire Me</a> 
                                         </div>
                                     </div>
                                 </div>
@@ -216,7 +222,7 @@
         </section>
         <!-- ===== About Section End  ===== -->
         <!-- ===== Services Section Start  ===== -->
-        <section class="service section hidden">
+        <section class="service section" id="services">
             <div class="container">
                 <div class="row">
                     <div class="section-title padd-15">
@@ -295,20 +301,183 @@
         </section>
         <!-- ===== Services Section End  ===== -->
         <!-- ===== Portfolio Section Start  ===== -->
-         <div class="portfolio section">
+         <div class="portfolio section" id="portfolio">
             <div class="container">
                 <div class="row">
                     <div class="section-title padd-15">
                         <h2>Portfolio</h2>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="portfolio-heading padd-15">
+                        <h2>My Last projects : </h2>
+                    </div>
+                </div>
+                <div class="row">
+                <!-- ===== Portfolio item Start  ===== -->
+                 <div class="portfolio-item padd-15">
+                    <div class="portfolio-item-inner shadow-dark">
+                        <div class="portfolio-img">
+                            <img src="assets/images/portfolio/portfolio-1.jpg " alt="">
+                        </div>
+                    </div>
+                 </div>
+                <!-- ===== Portfolio item End  ===== -->
+                 <!-- ===== Portfolio item Start  ===== -->
+                 <div class="portfolio-item padd-15">
+                    <div class="portfolio-item-inner shadow-dark">
+                        <div class="portfolio-img">
+                            <img src="assets/images/portfolio/portfolio-2.jpg " alt="">
+                        </div>
+                    </div>
+                 </div>
+                <!-- ===== Portfolio item End  ===== -->
+                 <!-- ===== Portfolio item Start  ===== -->
+                 <div class="portfolio-item padd-15">
+                    <div class="portfolio-item-inner shadow-dark">
+                        <div class="portfolio-img">
+                            <img src="assets/images/portfolio/portfolio-3.jpg " alt="">
+                        </div>
+                    </div>
+                 </div>
+                <!-- ===== Portfolio item End  ===== -->
+                 <!-- ===== Portfolio item Start  ===== -->
+                 <div class="portfolio-item padd-15">
+                    <div class="portfolio-item-inner shadow-dark">
+                        <div class="portfolio-img">
+                            <img src="assets/images/portfolio/portfolio-4.jpg " alt="">
+                        </div>
+                    </div>
+                 </div>
+                <!-- ===== Portfolio item End  ===== -->
+                 <!-- ===== Portfolio item Start  ===== -->
+                 <div class="portfolio-item padd-15">
+                    <div class="portfolio-item-inner shadow-dark">
+                        <div class="portfolio-img">
+                            <img src="assets/images/portfolio/portfolio-5.jpg " alt="">
+                        </div>
+                    </div>
+                 </div>
+                <!-- ===== Portfolio item End  ===== -->
+                 <!-- ===== Portfolio item Start  ===== -->
+                 <div class="portfolio-item padd-15">
+                    <div class="portfolio-item-inner shadow-dark">
+                        <div class="portfolio-img">
+                            <img src="assets/images/portfolio/portfolio-6.jpg " alt="">
+                        </div>
+                    </div>
+                 </div>
+                <!-- ===== Portfolio item End  ===== -->
+                </div> 
             </div>
          </div>
         <!-- ===== Portfolio Section End  ===== -->
+        <!-- ===== Contact Section Start  ===== -->
+         <section class="contact section" id="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="section-title padd-15">
+                        <h2>Contact Me</h2>
+                    </div>
+                </div>
+                <h3 class="contact-title padd-15">Have you Any Questions ?</h3>
+                <h4 class="contact-sub-title padd-15">I'M AT YOUR SERVICES</h4>
+                <div class="row">
+                    <!-- ===== Contact info item Start ===== -->
+                    <div class="contact-info-item padd-15">
+                        <div class="icon"><i class="fa fa-phone"></i></div>
+                        <h4>Call Us On</h4>
+                        <p>+225 0584350383</p>
+                    </div>
+                    <!-- ===== Contact info item End ===== -->
+                     <!-- ===== Contact info item Start ===== -->
+                    <div class="contact-info-item padd-15">
+                        <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
+                        <h4>Office</h4>
+                        <p>Islamadad</p>
+                    </div>
+                    <!-- ===== Contact info item End ===== -->
+                     <!-- ===== Contact info item Start ===== -->
+                    <div class="contact-info-item padd-15">
+                        <div class="icon"><i class="fa fa-envelope"></i></div>
+                        <h4>Email</h4>
+                        <p>coulyouss256@gmail.com</p>
+                    </div>
+                    <!-- ===== Contact info item End ===== -->
+                     <!-- ===== Contact info item Start ===== -->
+                    <div class="contact-info-item padd-15">
+                        <div class="icon"><i class="fa fa-globe-europe"></i></div>
+                        <h4>Website</h4>
+                        <p>www.domain,com </p>
+                    </div>
+                    <!-- ===== Contact info item End ===== -->
+                </div>
+                <h3 class="contact-title padd-15">SEND ME AN EMAIL?</h3>
+                <h4 class="contact-sub-title padd-15">I'M VERY RESPOSIVE TO MESSAGES</h4>
+                <!-- ===== Contact Form  ===== -->
+                 <div class="row">
+                    <div class="contact-form padd-15">
+                        <div class="row">
+                            <div class="form-item col-6 padd-15">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Name">
+                                </div>
+                            </div>
+                            <div class="form-item col-6 padd-15">
+                                <div class="form-group">
+                                    <input type="Email" class="form-control" placeholder="Email">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="form-item col-12 padd-15">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="Subject">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="form-item col-12 padd-15">
+                                <div class="form-group">
+                                    <textarea name="" class="form-control" id="" placeholder="Message"></textarea>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="form-item col-12 padd-15">
+                                <button type="submit" class="btn">Send Message </button>
+                            </div>
+                        </div>
+                    </div>
+                 </div>
+
+            </div>
+         </section>
+        <!-- ===== Contact Section End  ===== -->
          </div>
     </div>
     <!-- ===== Main Container End ===== -->
+    <!-- ===== Style Switcher Start ===== -->
+    <div class="style-switcher">
+        <div class="style-switcher-toggler s-icon">
+            <i class="fas fa-cog fa-spin"></i>
+        </div>
+         <div class="day-night s-icon">
+            <i class="fas "></i>
+         </div>
+         <h4>Theme Colors</h4>
+         <div class="colors">
+             <span class="color-1" onclick="setActiveStyle('color-1')"></span>
+             <span class="color-2" onclick="setActiveStyle('color-2')"></span>
+             <span class="color-3" onclick="setActiveStyle('color-3')"></span>
+             <span class="color-4" onclick="setActiveStyle('color-4')"></span>
+             <span class="color-5" onclick="setActiveStyle('color-5')"></span>
+         </div>
+    </div>
+    <!-- ===== Style Switcher End ===== -->
     <!-- ===== JS Files ===== -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.1.0/typed.umd.js"></script>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/style-switcher.js"></script>
 </body>
 </html>
