Mise à jour du projet : Derniere modification

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Ma page Web Perso</title>
     <meta content="Bienvenue sur mon site web personnel web, où je partage mes passions et projets." name="description">
     <meta content="site web,passion, projet, HTML5, CSS3, Javascript" name="keywords">
+
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/skins/color-1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
@@ -45,7 +46,7 @@
                     <div class="home-info padd-15">
                         <h3 class="hello">Salut, Bienvenue chez<span class="name"> You4Design</span></h3>
                         <h3 class="my-profession">Je suis un apprenant <span class="typing"> Web Designer</span></h3>
-                        <p> Je m'appelle <strong>Coulibaly Youssouf</strong> , un passionné de l'informatique. Titulaire d'une <stong>licence en Réseau informatique</stong>, j’ai eu l’occasion d’effectuer plusieurs stages pour mieux comprendre le monde professionnel, notamment à <strong>Orange Digital Center</strong>, où j’ai approfondi mes connaissances en développement web et design.Actuellement, je travaille chez <strong>Thanry CI</strong> en tant qu’agent de bureau attaché au service informatique. Parallèlement, je développe mes compétences en freelance pour devenir consultant web et, à terme, créer ma propre entreprise</p>
+                        <p> Je m'appelle <strong>Coulibaly Youssouf</strong> , un passionné de l'informatique. Titulaire d'une <strong>licence en Réseau informatique</strong>, j’ai eu l’occasion d’effectuer plusieurs stages pour mieux comprendre le monde professionnel, notamment à <strong>Orange Digital Center</strong>, où j’ai approfondi mes connaissances en développement web et design.Actuellement, je travaille chez <strong>Thanry CI</strong> en tant qu’agent de bureau attaché au service informatique. Parallèlement, je développe mes compétences en freelance pour devenir consultant web et, à terme, créer ma propre entreprise</p>
                     </div>
                         <div class="home-img padd-15 ">
                             <img src="assets/images/hero.jpg" alt="">
@@ -66,7 +67,7 @@
                     <div class="about-content padd-15">
                         <div class="row">
                             <div class="about-text padd-15">
-                                <h3>Agent attaché au service infomatique chez <span> Thanry Côte d'Ivoire</span></h3>
+                                <h3>Agent attaché au service informatique chez <span> Thanry Côte d'Ivoire</span></h3>
                                 <p>À Thanry CI, je travaille en tant qu’agent de bureau attaché au service informatique.
                                     Je saisis et gère les données sur Excel, notamment les numéros de colis de bois, leurs dimensions et les rapports mensuels.
                                     Je suis le stock de bois en production, en séchage et prêt à être expédié.
@@ -109,15 +110,15 @@
                                     <div class="skill-item padd-15">
                                          <h5>JS</h5>
                                          <div class="progress">
-                                            <div class="progress-in" style="width: 15%;"></div>
-                                            <div class="skill-percent">15%</div>
+                                            <div class="progress-in" style="width: 35%;"></div>
+                                            <div class="skill-percent">35%</div>
                                          </div>
                                     </div>
                                     <div class="skill-item padd-15">
                                         <h5>PHP</h5>
                                         <div class="progress">
-                                           <div class="progress-in" style="width: 20%;"></div>
-                                           <div class="skill-percent">20%</div>
+                                           <div class="progress-in" style="width: 50%;"></div>
+                                           <div class="skill-percent">50%</div>
                                         </div>
                                    </div>
                                    <div class="skill-item padd-15">
@@ -130,8 +131,8 @@
                                     <div class="skill-item padd-15">
                                         <h5>CSS3</h5>
                                         <div class="progress">
-                                           <div class="progress-in" style="width: 30%;"></div>
-                                           <div class="skill-percent">30%</div>
+                                           <div class="progress-in" style="width: 40%;"></div>
+                                           <div class="skill-percent">40%</div>
                                         </div>
                                     </div>
                                 </div>
@@ -150,7 +151,7 @@
                                                     <i class="fa fa-calendar"> </i> 2023 - 2024
                                                  </h3>
                                                  <h4 class="timeline-title">ORANGE DIGITAL CENTER</h4>
-                                                 <p class="timeline-text">Projet Canne intelligente pour les personnes malveillantes</p>
+                                                 <p class="timeline-text">Projet Canne intelligente pour les personnes malvoyantes</p>
                                             </div>
                                              <!-- ===== timeline item  ===== -->
                                             <div class="timeline-item padd-15">
@@ -268,7 +269,7 @@
                     </div>
                     <!-- ===== Contact info item End ===== -->
                 </div>
-                    <h3 class="contact-title padd-15">Envoyez moi un email </h3>
+                    <h3 class="contact-title padd-15">Envoyez moi un email</h3>
                 <!-- ===== Contact Form  ===== -->
                  <div class="row">
                     <div class="contact-form padd-15">
